@@ -8,6 +8,7 @@ module ActiveResource
     cattr_accessor :logger
 
     class << self
+      # Gets the URI of the resource's site
       def site
         if defined?(@site)
           @site
@@ -16,20 +17,24 @@ module ActiveResource
         end
       end
 
+      # Set the URI for the REST resources
       def site=(site)
         @connection = nil
         @site = create_site_uri_from(site)
       end
 
+      # Base connection to remote service
       def connection(refresh = false)
         @connection = Connection.new(site) if refresh || @connection.nil?
         @connection
       end
 
-      attr_accessor_with_default(:element_name)    { to_s.underscore }
-      attr_accessor_with_default(:collection_name) { element_name.pluralize }
-      attr_accessor_with_default(:primary_key, 'id')
-
+      attr_accessor_with_default(:element_name)    { to_s.underscore } #:nodoc:
+      attr_accessor_with_default(:collection_name) { element_name.pluralize } #:nodoc:
+      attr_accessor_with_default(:primary_key, 'id') #:nodoc:
+      
+      # Gets the resource prefix
+      #  prefix/collectionname/1.xml
       def prefix(options={})
         default = site.path
         default << '/' unless default[-1..-1] == '/'
@@ -37,6 +42,8 @@ module ActiveResource
         prefix(options)
       end
 
+      # Sets the resource prefix
+      #  prefix/collectionname/1.xml
       def prefix=(value = '/')
         prefix_call = value.gsub(/:\w+/) { |key| "\#{options[#{key}]}" }
         instance_eval <<-end_eval, __FILE__, __LINE__
@@ -48,23 +55,24 @@ module ActiveResource
         raise
       end
 
-      alias_method :set_prefix, :prefix=
+      alias_method :set_prefix, :prefix=  #:nodoc:
 
-      alias_method :set_element_name, :element_name=
-      alias_method :set_collection_name, :collection_name=
+      alias_method :set_element_name, :element_name=  #:nodoc:
+      alias_method :set_collection_name, :collection_name=  #:nodoc:
 
       def element_path(id, options = {})
         "#{prefix(options)}#{collection_name}/#{id}.xml#{query_string(options)}"
       end
 
-      def collection_path(options = {})
+      def collection_path(options = {}) 
         "#{prefix(options)}#{collection_name}.xml#{query_string(options)}"
       end
 
-      alias_method :set_primary_key, :primary_key=
+      alias_method :set_primary_key, :primary_key=  #:nodoc:
 
-      # Person.find(1) # => GET /people/1.xml
-      # StreetAddress.find(1, :person_id => 1) # => GET /people/1/street_addresses/1.xml
+      # Core method for finding resources.  Used similarly to ActiveRecord's find method.
+      #  Person.find(1) # => GET /people/1.xml
+      #  StreetAddress.find(1, :person_id => 1) # => GET /people/1/street_addresses/1.xml
       def find(*arguments)
         scope   = arguments.slice!(0)
         options = arguments.slice!(0) || {}
@@ -80,7 +88,7 @@ module ActiveResource
         connection.delete(element_path(id))
       end
 
-      # True if the resource is found.
+      # Evalutes to <tt>true</tt> if the resource is found.
       def exists?(id, options = {})
         id && !find_single(id, options).nil?
       rescue ActiveResource::ResourceNotFound
@@ -88,16 +96,19 @@ module ActiveResource
       end
 
       private
+        # Find every resource.
         def find_every(options)
           collection = connection.get(collection_path(options)) || []
           collection.collect! { |element| new(element, options) }
         end
 
-        # { :person => person1 }
+        # Find a single resource.
+        #  { :person => person1 }
         def find_single(scope, options)
           new(connection.get(element_path(scope, options)), options)
         end
 
+        # Accepts a URI and creates the site URI from that.
         def create_site_uri_from(site)
           site.is_a?(URI) ? site.dup : URI.parse(site)
         end
@@ -106,6 +117,7 @@ module ActiveResource
           @prefix_parameters ||= prefix_source.scan(/:\w+/).map { |key| key[1..-1].to_sym }.to_set
         end
 
+        # Builds the query string for the request.
         def query_string(options)
           # Omit parameters which appear in the URI path.
           query_params = options.reject { |key, value| prefix_parameters.include?(key) }
@@ -129,8 +141,8 @@ module ActiveResource
         end
     end
 
-    attr_accessor :attributes
-    attr_accessor :prefix_options
+    attr_accessor :attributes #:nodoc:
+    attr_accessor :prefix_options #:nodoc:
 
     def initialize(attributes = {}, prefix_options = {})
       @attributes = {}
@@ -138,19 +150,22 @@ module ActiveResource
       @prefix_options = prefix_options
     end
 
+    # Is the resource a new object?
     def new?
       id.nil?
     end
 
+    # Get the id of the object.
     def id
       attributes[self.class.primary_key]
     end
 
+    # Set the id of the object.
     def id=(id)
       attributes[self.class.primary_key] = id
     end
 
-    # True if and only if +other+ is the same object or is an instance of the same class, is not new?, and has the same id.
+    # True if and only if +other+ is the same object or is an instance of the same class, is not +new?+, and has the same +id+.
     def ==(other)
       other.equal?(self) || (other.instance_of?(self.class) && !other.new? && other.id == id)
     end
@@ -166,19 +181,22 @@ module ActiveResource
       id.hash
     end
 
+    # Delegates to +create+ if a new object, +update+ if its old.
     def save
       new? ? create : update
     end
 
+    # Delete the resource.
     def destroy
       connection.delete(element_path)
     end
 
-    # True if this resource is found.
+    # Evaluates to <tt>true</tt> if this resource is found.
     def exists?
       !new? && self.class.exists?(id, prefix_options)
     end
 
+    # Convert the resource to an XML string
     def to_xml(options={})
       attributes.to_xml({:root => self.class.element_name}.merge(options))
     end
@@ -215,17 +233,19 @@ module ActiveResource
         self.class.connection(refresh)
       end
 
+      # Update the resource on the remote service.
       def update
         connection.put(element_path, to_xml)
       end
 
+      # Create (i.e., save to the remote service) the new resource.
       def create
         returning connection.post(collection_path, to_xml) do |response|
           self.id = id_from_response(response)
         end
       end
 
-      # takes a response from a typical create post and pulls the ID out
+      # Takes a response from a typical create post and pulls the ID out
       def id_from_response(response)
         response['Location'][/\/([^\/]*?)(\.\w+)?$/, 1]
       end
@@ -239,10 +259,12 @@ module ActiveResource
       end
 
     private
+      # Tries to find a resource for a given collection name; if it fails, then the resource is created
       def find_or_create_resource_for_collection(name)
         find_or_create_resource_for(name.to_s.singularize)
       end
-
+      
+      # Tries to find a resource for a given name; if it fails, then the resource is created
       def find_or_create_resource_for(name)
         resource_name = name.to_s.camelize
         resource_name.constantize
@@ -253,7 +275,7 @@ module ActiveResource
         resource
       end
 
-      def method_missing(method_symbol, *arguments)
+      def method_missing(method_symbol, *arguments) #:nodoc:
         method_name = method_symbol.to_s
 
         case method_name.last
